--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 <html lang="es">
 
     <title> Documentación LA Spain Bot</title>
-    
+
+    <body>
+        <header>
+            <ul>
+                <li><a href="" class="current">Inicio </a></li>
+            </ul>
+        </header>
+    </body>
 
 </html>
