--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <header>
             <ul>
-                <li><a href="" class="current">Inicio </a></li>
+                <li><a href="acerca.html">Inicio </a></li>
             </ul>
         </header>
     </body>
