--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
     <body>
         <header>
             <ul>
+                <li><a href="https://www.discord.gg/LASpain">Server de Discord</a></li>
                 <li><a href="" class="current">Inicio </a></li>
                 <li><a href="acerca.html">Acerca </a></li>
             </ul>
         </header>
+        <main>
+            <section class="intro">
+                <h1>Introducción</h1>
+
+            </section>
+        </main>
+
     </body>
 
 </html>
